--- a/1_dockerfile/curl/Dockerfile
+++ b/1_dockerfile/curl/Dockerfile
@@ -1,4 +1,4 @@
-from ubuntu
-run apt-get update && apt-get install curl wget -y
-run curl -I www.google.com
-entrypoint ["curl"]
+FROM ubuntu
+RUN apt-get update && apt-get install curl wget -y
+RUN curl -I www.google.com
+ENTRYPOINT ["curl"]
