--- a/2_compose/docker-compose.yml
+++ b/2_compose/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   web:
     image: xataz/gobrowser
     ports:
-    - "2020:5000"
+   	 - "2020:5000"
     volumes:
-    - .:/code
+    	- /home:/var
     environement: 
-    	PATH_FILE: development
+    	- PATH_FILE=/var
 	
